package logic

import (
	"context"

	"explorapal/app/audio-processing/proto"
	"explorapal/app/audio-processing/rpc/internal/svc"

	"github.com/zeromicro/go-zero/core/logx"
)

type SpeechToTextLogic struct {
	ctx    context.Context
	svcCtx *svc.ServiceContext
	logx.Logger
}

func NewSpeechToTextLogic(ctx context.Context, svcCtx *svc.ServiceContext) *SpeechToTextLogic {
	return &SpeechToTextLogic{
		ctx:    ctx,
		svcCtx: svcCtx,
		Logger: logx.WithContext(ctx),
	}
}

func (l *SpeechToTextLogic) SpeechToText(in *audioprocessing.SpeechToTextReq) (*audioprocessing.SpeechToTextResp, error) {
	// TODO: 实现语音转文字逻辑

	// 1. 验证输入
	if len(in.AudioData) == 0 {
		return &audioprocessing.SpeechToTextResp{
			Status: 400,
			Msg:    "音频数据不能为空",
		}, nil
	}

	// 2. 使用系统语音识别或AI服务进行处理
	text, confidence, err := l.processSpeechToText(in)
	if err != nil {
		l.Logger.Errorf("语音转文字失败: %v", err)
		// 返回模拟结果
		return l.getDefaultSpeechToTextResult(in), nil
	}

	return &audioprocessing.SpeechToTextResp{
		Status:     200,
		Msg:        "语音转文字成功",
		Text:       sanitizeUTF8(text),
		Confidence: confidence,
	}, nil
}

// processSpeechToText 处理语音转文字
func (l *SpeechToTextLogic) processSpeechToText(in *audioprocessing.SpeechToTextReq) (string, float64, error) {
	// TODO: 实现实际的语音转文字处理
	// 这里可以调用系统API或AI服务

	// 暂时返回模拟结果
	return "这是识别出的语音内容", 0.95, nil
}

// getDefaultSpeechToTextResult 返回默认的语音转文字结果
func (l *SpeechToTextLogic) getDefaultSpeechToTextResult(in *audioprocessing.SpeechToTextReq) *audioprocessing.SpeechToTextResp {
	return &audioprocessing.SpeechToTextResp{
		Status:     200,
		Msg:        "语音转文字成功（使用模拟响应）",
		Text:       sanitizeUTF8("这是模拟的语音识别结果。实际环境中，这里将调用语音识别服务来处理您的音频。"),
		Confidence: 0.85,
	}
}
